--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 {
-    "builds": [
+    "rewrites": [
         {
-            "src": "dashbot/wsgi.py",
-            "use": "@vercel/python",
-            "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "dashbot/wsgi.py"
+            "source": "/(.*)",
+            "destination": "/dashbot/wsgi.py"
         }
     ]
 }
